brat/test/golden/error/multilambda-id2.brat.golden
Error in test/golden/error/multilambda-id2.brat on line 2:
g = { 0 => ||succ(n) => | }
           ^

  Elab error "Noun required at this position"

